--- a/html/main.html
+++ b/html/main.html
@@ -114,6 +114,7 @@
                         </div>
                     </div>
                     <div class="content">
+
                     </div>
                     <div class="content">
                     </div>
@@ -166,19 +167,36 @@
                     <div class="place-wrap selectbox">
                         <p>장소</p>
                         <select name="" id="place">
+                            <option value="00000">선택</option>
                             <option value="00001">서울</option>
                         </select>
                     </div>
                     <div class="duration selectbox">
                         <p>진행기간</p>
                         <select name="" id="duration">
+                            <option value="00000">선택</option>
                             <option value="00001">2주</option>
                         </select>
                     </div>
                     <div class="person selectbox">
                         <p>인원</p>
                         <select name="" id="person">
+                            <option value="00001">선택</option>
                             <option value="00001">1명</option>
+                        </select>
+                    </div>
+                    <div class="language selectbox">
+                        <p>언어</p>
+                        <select name="" id="language">
+                            <option value="00001">선택</option>
+                            <option value="00001">C</option>
+                        </select>
+                    </div>
+                    <div class="department selectbox">
+                        <p>분야</p>
+                        <select name="" id="department">
+                            <option value="00001">선택</option>
+                            <option value="00001">웹</option>
                         </select>
                     </div>
                 </div>
