--- a/html/main.html
+++ b/html/main.html
@@ -101,8 +101,8 @@
                     
                     <div class="content">
                         <div class="info-wrap">
-                            <div class="image">
-                                
+                            <div class="image-wrap">
+                                <img src="../image/test.JPG" alt="test" class="w100">
                             </div>
                             <div class="title">
 
