--- a/html/main.html
+++ b/html/main.html
@@ -105,10 +105,22 @@
                                 <img src="../image/test.JPG" alt="test" class="w100">
                             </div>
                             <div class="title">
-
+                                제목임다
                             </div>
                             <div class="info">
-
+                                <div class="date">
+                                    2021.06.08 ~2022.09.09
+                                </div>
+                                <div class="place">
+                                    서울
+                                </div>
+                                <div class="department">
+                                    <span>분야</span>ㅇ
+                                </div>
+                                
+                                <div class="language">
+                                    <span>언어</span>ㅊ
+                                </div>
                             </div>
 
                         </div>
