--- a/html/main.html
+++ b/html/main.html
@@ -208,7 +208,7 @@
     <div class="popup-wrap">
         <div class="write-popup">
             <form action="">
-                <input type="text" id="" name="" placeholder="제목">
+                <input type="text" id="" name="" placeholder="제목ddddd">
                 <input type="password" id="" name="" placeholder="비밀번호">
                 <p></p>
                 <div class="date">
