--- a/html/main.html
+++ b/html/main.html
@@ -222,7 +222,7 @@
                         <i class="far fa-calendar-alt"></i>
                     </fieldset>
                 </div>
-                <input type="text" id="" name="" placeholder="연락처">
+                <input type="text" id="contact" name="" placeholder="연락처">
                 <div class="selectbox-wrap">
                     <div class="place-wrap selectbox">
                         <p>장소</p>
@@ -269,14 +269,36 @@
             </form>
         </div>
         <div class="view-popup">
-            제목
-            기간
-            언어
-            분야
-            인원
-            장소
+            <div class="title">
+                <span>제목</span>
+                <p></p>
+            </div>
+            <div class="date">
+                <span>기간</span>
+                <p>2020.06.21~2120.12.15</p>
+            </div>
+            <div class="language">
+                <span>언어</span>
+                <p></p>
+            </div>
+            <div class="department">
+                <span>분야</span>
+                <p></p>
+            </div>
+            <div class="person">
+                <span>인원</span>
+                <p></p>
+            </div>
+            <div class="place">
+                <span>장소</span>
+                <p></p>
+            </div>
+            <div class="contact">
+                <span>연락처</span>
+                <p></p>
+            </div>
             <div class="button-wrap">
-                <button type="submit" class="popup_button view-button">제출</button>
+                <button type="submit" class="popup_button view-button">마감</button>
                 <button type="button" class="popup_button view-button exit">닫기</button>
             </div>
         </div>
