--- a/html/main.html
+++ b/html/main.html
@@ -45,7 +45,7 @@
                 <ul class="category">
                     <li>
                         <div class="category-header">
-                            <p>아</p>
+                            <p>언어</p>
                             <span>
                                 <i class="fas fa-sort-down"></i>
                             </span>
@@ -53,24 +53,24 @@
                         <ul>
                             <li>
                                 <input type="checkbox">
-                                <p>야</p>
+                                <p>C</p>
                                 <span>(21)</span>
                             </li>
                             <li>
                                 <input type="checkbox">
-                                <p>어</p>
+                                <p>C++</p>
                                 <span>(21)</span>
                             </li>
                             <li>
                                 <input type="checkbox">
-                                <p>여</p>
+                                <p>자바스크립트</p>
                                 <span>(21)</span>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <div class="category-header">
-                            <p>가</p>
+                            <p>분야</p>
                             <span>
                                 <i class="fas fa-sort-down"></i>
                             </span>
@@ -78,17 +78,17 @@
                         <ul>
                             <li>
                                 <input type="checkbox">
-                                <p>나</p>
+                                <p>웹</p>
                                 <span>(21)</span>
                             </li>
                             <li>
                                 <input type="checkbox">
-                                <p>다</p>
+                                <p>코테</p>
                                 <span>(21)</span>
                             </li>
                             <li>
                                 <input type="checkbox">
-                                <p>라</p>
+                                <p>크롤링</p>
                                 <span>(21)</span>
                             </li>
                         </ul>
@@ -109,7 +109,7 @@
                                 <img src="../image/test.JPG" alt="test" class="w100">
                             </div>
                             <div class="title">
-                                제목임다
+                                제목
                             </div>
                             <div class="info">
                                 <div class="date">
@@ -118,12 +118,11 @@
                                 <div class="place">
                                     서울
                                 </div>
-                                <div class="department">
-                                    <span>분야</span>ㅇ
-                                </div>
-                                
                                 <div class="language">
-                                    <span>언어</span>ㅊ
+                                    <span>언어</span>자바스크립트
+                                </div>
+                                <div class="department">
+                                    <span>분야</span>웹
                                 </div>
                             </div>
 
