--- a/html/main.html
+++ b/html/main.html
@@ -108,15 +108,15 @@
                             <div class="image-wrap">
                                 <img src="../image/test.JPG" alt="test" class="w100">
                             </div>
-                            <div class="title">
-                                제목
-                            </div>
                             <div class="info">
+                                <div class="title">
+                                    제목
+                                </div>
                                 <div class="date">
                                     2021.06.08 ~2022.09.09
                                 </div>
                                 <div class="place">
-                                    서울
+                                    <span>지역</span>서울
                                 </div>
                                 <div class="language">
                                     <span>언어</span>자바스크립트
