--- a/html/main.html
+++ b/html/main.html
@@ -101,8 +101,7 @@
             </div>
 
             <div class="content-wrapper">
-                <div class="content-wrap">
-                    
+                <div class="content-wrap" id="top">
                     <div class="content">
                         <div class="info-wrap">
                             <div class="image-wrap">
@@ -203,6 +202,13 @@
         <i class="fas fa-cloud">
         </i>
     </div>  -->
+    
+
+    <div class="up-arrow">
+        <a href="#top">
+            <i class="fas fa-arrow-circle-up"></i>
+        </a>
+    </div> 
 
     <div class="popup-wrap">
         <div class="write-popup">
