--- a/html/error.html
+++ b/html/error.html
@@ -51,14 +51,15 @@
               </div>
             </div>
             <div class="board">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio sapiente sunt nulla? Minima in, dolores repudiandae neque dicta quaerat corporis placeat est! Expedita ea quae nihil, distinctio impedit ullam!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio sapiente sunt nulla? Minima in, dolores repudiandae neque dicta quaerat corporis placeat est! Expedita ea quae nihil, distinctio impedit ullam!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio sapiente sunt nulla? Minima in, dolores repudiandae neque dicta quaerat corporis placeat est! Expedita ea quae nihil, distinctio impedit ullam!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio sapiente sunt nulla? Minima in, dolores repudiandae neque dicta quaerat corporis placeat est! Expedita ea quae nihil, distinctio impedit ullam!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio sapiente sunt nulla? Minima in, dolores repudiandae neque dicta quaerat corporis placeat est! Expedita ea quae nihil, distinctio impedit ullam!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio sapiente sunt nulla? Minima in, dolores repudiandae neque dicta quaerat corporis placeat est! Expedita ea quae nihil, distinctio impedit ullam!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio sapiente sunt nulla? Minima in, dolores repudiandae neque dicta quaerat corporis placeat est! Expedita ea quae nihil, distinctio impedit ullam!
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa distinctio sapiente sunt nulla? Minima in, dolores repudiandae neque dicta quaerat corporis placeat est! Expedita ea quae nihil, distinctio impedit ullam!
+              <div class="title">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus itaque culpa laborum nostrum? Explicabo incidunt corrupti quidem inventore animi nulla aperiam libero totam similique ut. Quidem omnis impedit officiis sint.
+              </div>
+              <div class="category">
+
+              </div>
+              <div class="content">
+
+              </div>
             </div>
           </div>
         </div>
