--- a/html/error2.html
+++ b/html/error2.html
@@ -29,6 +29,14 @@
               내용입니다
           </div>
         </div>
+        <div class="box">
+          <div class="title">
+            <p>테스트입니다</p>
+          </div>
+          <div class="content">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam, vero! Eius praesentium quos quaerat amet consectetur! Suscipit nam unde, similique velit sunt quibusdam et, rerum exercitationem nihil, quidem ut sed!
+          </div>
+        </div>
       </div>
       <div class="content-wrapper">
         <div class="content-wrap">
@@ -152,14 +160,25 @@
     
 
     <script>
-      $(document).ready(function() {
 
+      var mediaCheck = {}
+      $(document).ready(function() {
+          const media = matchMedia("screen and (max-width: 993px)");
+          
+          media.addListener((a) => {
+            if(mediaCheck.sideWrapSw){
+              $(".side-wrap").css("left","");
+              console.log('되나',$(".side-wrap").css("left"));
+            }
+          })
           $(".side-sw").click(function(){
-              console.log($(".side-wrap").css("left"));
-              if($(".side-wrap").css("left") === '0px')
-                  $(".side-wrap").css("left","-9999px");
-              else
-                  $(".side-wrap").css("left","0");
+              if($(".side-wrap").css("left") === '0px'){
+                $(".side-wrap").css("left","-9999px");
+                mediaCheck.sideWrapSw = false;
+              }else{
+                $(".side-wrap").css("left","0");
+                mediaCheck.sideWrapSw = true;
+              }
           });
 
           $(".write").click(function(){
