--- a/html/error2.html
+++ b/html/error2.html
@@ -127,11 +127,14 @@
   </div>
   <div class="menu-wrap">
     <ul>
-      <li>
+      <!-- <li>
         <input type="text" name="" id="">
-      </li>
-      <li>
-        <i class="fas fa-search"></i>
+      </li> -->
+      <li class="search">
+        <div class="search">
+          <input type="text" name="" id="">
+          <i class="fas fa-search"></i>
+        </div>
       </li>
       <li class="write">
         <i class="fas fa-pen"></i>
