--- a/html/error2.html
+++ b/html/error2.html
@@ -130,10 +130,11 @@
       <!-- <li>
         <input type="text" name="" id="">
       </li> -->
-      <li class="search">
+      <li>
         <div class="search">
-          <i class="fas fa-search"></i>
+          <i class="fas fa-search mobile"></i>
           <input type="text" name="" id="">
+          <i class="fas fa-search desktop"></i>
         </div>
       </li>
       <li class="write">
