--- a/html/error2.html
+++ b/html/error2.html
@@ -63,7 +63,7 @@
                   </div>
                 </div>
                 <div class="i-wrap">
-                  <i class="fas fa-bars"></i>
+                  <i class="fas fa-print"></i>
                 </div>
               </div>
             </div>
