--- a/html/baseball.html
+++ b/html/baseball.html
@@ -23,18 +23,16 @@
         let msgRecord = [];
         let is_start = 0;
         let count = 0;
-        function response(msg, sender, replier) {
+        function response(room,msg,sender,isGroupChat,replier,imageDB,packageName) {
             if (msg.startsWith("/야구") && is_start === 0) {
                 answer = setNumber();
-
                 replier.reply(answer);
-
                 replier.reply("숫자야구게임을 시작합니다. \n4자리 0~b범위까지 문자를 입력해주세요. \n포기는 (/나는빡빡이다)를 \n입력해주세요.");
                 is_start = 1;
                 count = 15;
             }
             if (is_start === 1) {
-                if ((!isNaN(Number(msg)) || msg.indexOf('a') || msg.indexOf('b')) && msg.length == 4) {
+                if ((!isNaN(Number(msg)) || msg.indexOf('a') > -1 || msg.indexOf('b')  > -1) && msg.length == 4) {
                     if(msgCompare(msg)){
                         replier.reply("중복된 숫자입니다.");
                         return;
@@ -47,7 +45,7 @@
                     if (result[0] == 4) {
                         replier.reply(sender + "님, 정답입니다!\n게임을 종료합니다.");
                         msgRecord = [];
-                        rank[sender] =+ 1;
+                        rank[sender] = (rank[sender] == undefined ? 0 : rank[sender]) + 1;
                         replier.reply(JSON.stringify(rank));
                         is_start = 0;
                         count = 10;
@@ -138,7 +136,7 @@
                 
                 let msg = document.getElementById("msg");
                 let sender = document.getElementById("sender");
-                response(msg.value, sender.value, {reply:replier2});
+                response(null,msg.value, sender.value,null, {reply:replier2});
                 msg.value = "";
             }
         }
