--- a/html/main.html
+++ b/html/main.html
@@ -104,6 +104,9 @@
                 <div class="content-wrap" id="top">
                     <div class="content">
                         <div class="info-wrap">
+                            <div class="i-wrap">
+                                <i class="fas fa-map-pin"></i>
+                            </div>
                             <div class="image-wrap">
                                 <img src="../image/test.JPG" alt="test" class="w100">
                             </div>
@@ -191,6 +194,9 @@
                     <div class="content">
                     </div>
                 </div>
+                <footer class="footer-wrap">
+                    asd
+                </footer>
             </div>
         </div>
     </div>
@@ -307,9 +313,9 @@
                 <button type="button" class="popup_button view-button exit">닫기</button>
             </div>
         </div>
-
-
     </div>
+    
+
 
     <script>
         $(document).ready(function() {
