--- a/html/main.html
+++ b/html/main.html
@@ -107,9 +107,9 @@
                             <div class="i-wrap">
                                 <i class="fas fa-map-pin"></i>
                             </div>
-                            <div class="image-wrap">
+                            <!-- <div class="image-wrap">
                                 <img src="../image/test.JPG" alt="test" class="w100">
-                            </div>
+                            </div> -->
                             <div class="info">
                                 <div class="title">
                                     제목
