--- a/html/main.html
+++ b/html/main.html
@@ -105,79 +105,31 @@
                     <div class="content">
                         <div class="info-wrap">
                             <div class="i-wrap">
-                                <i class="fas fa-map-pin"></i>
+                                <i class="fas fa-map-pin">
+                                </i>
                             </div>
                             <!-- <div class="image-wrap">
                                 <img src="../image/test.JPG" alt="test" class="w100">
                             </div> -->
                             <div class="info">
                                 <div class="title">
-                                    제목
-                                </div>
-                                <div class="date">
-                                    2021.06.08 ~2022.09.09
+                                    나는미어캣미어캣미어캣미어캣
                                 </div>
                                 <div class="place">
-                                    <span>지역</span>서울
+                                    <span><i class="fas fa-map-marker-alt"></i></span>서울
                                 </div>
                                 <div class="language">
-                                    <span>언어</span>자바스크립트
+                                    <span><i class="fab fa-amilia"></i></span>스크립트
                                 </div>
                                 <div class="department">
-                                    <span>분야</span>웹
+                                    <span><i class="fas fa-book-open"></i></span>게임
+                                </div>
+                                <div class="date">
+                                   <span><i class="far fa-calendar-alt"></i></span>2021.06.08 ~2022.09.09
                                 </div>
                             </div>
 
                         </div>
-                    </div>
-                    <div class="content">
-
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
-                    </div>
-                    <div class="content">
                     </div>
                     <div class="content">
                     </div>
@@ -199,6 +151,7 @@
                 </footer>
             </div>
         </div>
+
     </div>
 
     <!-- <div class="search-info">
