--- a/html/main.html
+++ b/html/main.html
@@ -125,7 +125,8 @@
                                     <span><i class="fas fa-book-open"></i></span>게임
                                 </div>
                                 <div class="date">
-                                   <span><i class="far fa-calendar-alt"></i></span>2021.06.08 ~2022.09.09
+                                   <span><i class="far fa-calendar-alt"></i></span>
+                                   06.08 ~ 09.09
                                 </div>
                             </div>
 
@@ -146,9 +147,9 @@
                     <div class="content">
                     </div>
                 </div>
-                <footer class="footer-wrap">
+                <!-- <footer class="footer-wrap">
                     asd
-                </footer>
+                </footer> -->
             </div>
         </div>
 
