--- a/html/main.html
+++ b/html/main.html
@@ -128,6 +128,9 @@
                                    <span><i class="far fa-calendar-alt"></i></span>
                                    06.08 ~ 09.09
                                 </div>
+                                <div class="view-button view">
+                                    <i class="fas fa-ellipsis-h"></i>
+                                </div>
                             </div>
 
                         </div>
@@ -234,37 +237,57 @@
             </form>
         </div>
         <div class="view-popup">
-            <div class="title">
-                <span>제목</span>
-                <p></p>
+            <div class="header">
+                <p>상</p>
+                <i class="fas fa-times view-button exit"></i>
             </div>
-            <div class="date">
-                <span>기간</span>
-                <p>2020.06.21~2120.12.15</p>
-            </div>
-            <div class="language">
-                <span>언어</span>
-                <p></p>
-            </div>
-            <div class="department">
-                <span>분야</span>
-                <p></p>
-            </div>
-            <div class="person">
-                <span>인원</span>
-                <p></p>
-            </div>
-            <div class="place">
-                <span>장소</span>
-                <p></p>
-            </div>
-            <div class="contact">
-                <span>연락처</span>
-                <p></p>
-            </div>
-            <div class="button-wrap">
-                <button type="submit" class="popup_button view-button">마감</button>
-                <button type="button" class="popup_button view-button exit">닫기</button>
+            <div class="content">
+                <table>
+                    <tr>
+                        <td>제목제목제목제목제제목제제목제제목제제목제제목제제목제제목제제목제제목제제목제제목제목제목</td>
+                        <td>내용내용내용내용내용내용</td>
+                    </tr>
+                    <tr>
+                        <td>제목제목제목제목제목제목</td>
+                        <td>내용내용내용내용내용내용</td>
+                    </tr>
+                    <tr>
+                        <td>제목제목제목제목제목제목</td>
+                        <td>내용내용내용내용내용내용</td>
+                    </tr>
+                </table>
+                <!-- <div class="title">
+                    <span>제목</span>
+                    <p></p>
+                </div>
+                <div class="date">
+                    <span>기간</span>
+                    <p>2020.06.21~2120.12.15</p>
+                </div>
+                <div class="language">
+                    <span>언어</span>
+                    <p></p>
+                </div> -->
+                <!-- <div class="department">
+                    <span>분야</span>
+                    <p></p>
+                </div>
+                <div class="person">
+                    <span>인원</span>
+                    <p></p>
+                </div>
+                <div class="place">
+                    <span>장소</span>
+                    <p></p>
+                </div>
+                <div class="contact">
+                    <span>연락처</span>
+                    <p></p>
+                </div> -->
+                <!-- <div class="button-wrap">
+                    <button type="submit" class="popup_button view-button">마감</button>
+                     <button type="button" class="popup_button view-button exit">닫기</button>
+                </div> -->
             </div>
         </div>
     </div>
@@ -284,7 +307,7 @@
                     $(".side-wrapper").css("left","0");
             });
 
-            $(".content").click(function(){
+            $(".view-button.view").click(function(){
                 popupManagement({"display":"block"},function(){
                     $(".view-popup").css("display","block");
                 })
