--- a/html/main.html
+++ b/html/main.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="../css/jquery-ui.css">
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/jquery-ui.js"></script>
+    <link rel="stylesheet" href="../css/summernote-lite.min.css">
+    <script src="../js/summernote-lite.min.js"></script>
+    <script src="../js/summernote-ko-KR.min.js"></script>
 </head>
 <body>
     <div class="wrap">
@@ -180,21 +183,28 @@
                 <i class="fas fa-times write-button exit-button"></i>
             </div>
             <form action="">
-                <input type="text" id="" name="" placeholder="제목">
-                <input type="password" id="" name="" placeholder="비밀번호">
-                <p></p>
-                <div class="date">
-                    <fieldset>
-                        <input type="text" class="calendar" name="startDate" placeholder="시작일">
-                        <i class="far fa-calendar-alt"></i>
-                    </fieldset>
-                    <p>&nbsp;~&nbsp;</p>
-                    <fieldset>
-                        <input type="text" class="calendar" name="endDate" placeholder="종료일">
-                        <i class="far fa-calendar-alt"></i>
-                    </fieldset>
-                </div>
-                <input type="text" id="contact" name="" placeholder="연락처">
+                <fieldset>
+                    <label for="pop_title"><p>제목</p></label>
+                    <input type="text" id="pop_title" name="">
+                </fieldset>
+                <fieldset>
+                    <label for="pop_password"><p>비밀번호</p></label>
+                    <input type="password" id="pop_password" name="">
+                </fieldset>
+                <fieldset>
+                    <label for="pop_startDate"><p>시작일</p></label>
+                    <input type="text" class="calendar" name="startDate">
+                    <i class="far fa-calendar-alt date"></i>
+                </fieldset>
+                <fieldset>
+                    <label for="pop_endDate"><p>종료일</p></label>
+                    <input type="text" class="calendar" name="endDate">
+                    <i class="far fa-calendar-alt date"></i>
+                </fieldset>
+                <fieldset>
+                    <label for="pop_contact"><p>연락처</p></label>
+                    <input type="text" id="contact" name="">
+                </fieldset>
                 <div class="selectbox-wrap">
                     <div class="place-wrap selectbox">
                         <p>장소</p>
@@ -203,13 +213,6 @@
                             <option value="00001">서울</option>
                         </select>
                     </div>
-                    <!-- <div class="duration selectbox">
-                        <p>진행기간</p>
-                        <select name="" id="duration">
-                            <option value="00000">선택</option>
-                            <option value="00001">2주</option>
-                        </select>
-                    </div> -->
                     <div class="person selectbox">
                         <p>인원</p>
                         <select name="" id="person">
@@ -232,7 +235,7 @@
                         </select>
                     </div>
                 </div>
-                <textarea id="" name="" placeholder=""></textarea>
+                <textarea id="summernote" name="editordata"></textarea>
                 <div class="button-wrap">
                     <button type="submit" class="popup_button write-button"><i class="fas fa-edit"></i></button>
                     <!-- <button type="button" class="popup_button write-button exit">닫기</button> -->
@@ -340,6 +343,14 @@
             $(".popup-wrap").css(state);
             call();
         }
+        $('#summernote').summernote({
+            height: '200',             // 최소 높이
+            width : '100%',
+            
+            focus: false,                  // 에디터 로딩후 포커스를 맞출지 여부
+            lang: "ko-KR",					// 한글 설정
+            placeholder: '최대 2048자까지 쓸 수 있습니다'	//placeholder 설정
+    	});
     </script>
 
     
