--- a/html/main.html
+++ b/html/main.html
@@ -177,72 +177,71 @@
     </div> 
 
     <div class="popup-wrap">
-        <div class="write-popup">
+        <div class="write-popup content-wrap">
             <div class="header">
                 <p>상</p>
                 <i class="fas fa-times write-button exit-button"></i>
             </div>
-            <form action="">
-                <fieldset>
-                    <label for="pop_title"><p>제목</p></label>
-                    <input type="text" id="pop_title" name="">
-                </fieldset>
-                <fieldset>
-                    <label for="pop_password"><p>비밀번호</p></label>
-                    <input type="password" id="pop_password" name="">
-                </fieldset>
-                <fieldset>
-                    <label for="pop_startDate"><p>시작일</p></label>
-                    <input type="text" class="calendar" name="startDate">
-                    <i class="far fa-calendar-alt date"></i>
-                </fieldset>
-                <fieldset>
-                    <label for="pop_endDate"><p>종료일</p></label>
-                    <input type="text" class="calendar" name="endDate">
-                    <i class="far fa-calendar-alt date"></i>
-                </fieldset>
-                <fieldset>
-                    <label for="pop_contact"><p>연락처</p></label>
-                    <input type="text" id="contact" name="">
-                </fieldset>
-                <div class="selectbox-wrap">
-                    <div class="place-wrap selectbox">
-                        <p>장소</p>
-                        <select name="" id="place">
-                            <option value="00000">선택</option>
-                            <option value="00001">서울</option>
-                        </select>
+            <div class="content">
+                <form action="">
+                    <fieldset>
+                        <label for="pop_title"><p>제목</p></label>
+                        <input type="text" id="pop_title" name="">
+                    </fieldset>
+                    <fieldset>
+                        <label for="pop_password"><p>비밀번호</p></label>
+                        <input type="password" id="pop_password" name="">
+                    </fieldset>
+                    <fieldset>
+                        <label for="pop_startDate"><p>시작일</p></label>
+                        <input type="text" class="calendar" id="pop_startDate" name="startDate">
+                        <i class="far fa-calendar-alt date"></i>
+                    </fieldset>
+                    <fieldset>
+                        <label for="pop_endDate"><p>종료일</p></label>
+                        <input type="text" class="calendar" id="pop_endDate" name="endDate">
+                        <i class="far fa-calendar-alt date"></i>
+                    </fieldset>
+                    <fieldset>
+                        <label for="pop_contact"><p>연락처</p></label>
+                        <input type="text" id="contact" name="">
+                    </fieldset>
+                    <fieldset>
+                        <label for="pop_person"><p>인원</p><p class="range_desc">(5명)</p></label>
+                        <input type="range" id="pop_person" name="">
+                    </fieldset>
+                    <div class="selectbox-wrap">
+                        <div class="place-wrap selectbox">
+                            <p>장소</p>
+                            <select name="" id="place">
+                                <option value="00000">선택</option>
+                                <option value="00001">서울</option>
+                            </select>
+                        </div>
+                        <div class="language selectbox">
+                            <p>언어</p>
+                            <select name="" id="language">
+                                <option value="00001">선택</option>
+                                <option value="00001">C</option>
+                            </select>
+                        </div>
+                        <div class="department selectbox">
+                            <p>분야</p>
+                            <select name="" id="department">
+                                <option value="00001">선택</option>
+                                <option value="00001">웹</option>
+                            </select>
+                        </div>
                     </div>
-                    <div class="person selectbox">
-                        <p>인원</p>
-                        <select name="" id="person">
-                            <option value="00001">선택</option>
-                            <option value="00001">1명</option>
-                        </select>
+                    <textarea id="summernote" name="editordata"></textarea>
+                    <div class="button-wrap">
+                        <button type="submit" class="popup_button write-button"><i class="fas fa-edit"></i></button>
+                        <!-- <button type="button" class="popup_button write-button exit">닫기</button> -->
                     </div>
-                    <div class="language selectbox">
-                        <p>언어</p>
-                        <select name="" id="language">
-                            <option value="00001">선택</option>
-                            <option value="00001">C</option>
-                        </select>
-                    </div>
-                    <div class="department selectbox">
-                        <p>분야</p>
-                        <select name="" id="department">
-                            <option value="00001">선택</option>
-                            <option value="00001">웹</option>
-                        </select>
-                    </div>
-                </div>
-                <textarea id="summernote" name="editordata"></textarea>
-                <div class="button-wrap">
-                    <button type="submit" class="popup_button write-button"><i class="fas fa-edit"></i></button>
-                    <!-- <button type="button" class="popup_button write-button exit">닫기</button> -->
-                </div>
-            </form>
+                </form>
+            </div>
         </div>
-        <div class="view-popup">
+        <div class="view-popup content-wrap">
             <div class="header">
                 <p>상</p>
                 <i class="fas fa-times view-button exit-button"></i>
@@ -292,7 +291,7 @@
                 </div> -->
                 <!-- <div class="button-wrap">
                     <button type="submit" class="popup_button view-button">마감</button>
-                     <button type="button" class="popup_button view-button exit">닫기</button>
+                        <button type="button" class="popup_button view-button exit">닫기</button>
                 </div> -->
             </div>
         </div>
