--- a/html/main.html
+++ b/html/main.html
@@ -182,7 +182,7 @@
 
         <div class="write-popup content-wrap">
             <div class="header">
-                <p>상</p>
+                <p>등록</p>
                 <i class="fas fa-times write-button exit-button"></i>
             </div>
             <div class="content">
@@ -246,52 +246,40 @@
         </div>
         <div class="view-popup content-wrap">
             <div class="header">
-                <p>상</p>
+                <p>상세보기</p>
                 <i class="fas fa-times view-button exit-button"></i>
             </div>
             <div class="content">
-                <table>
-                    <tr>
-                        <td>제목제목제목제목제제목제제목제제목제제목제제목제제목제제목제제목제제목제제목제제목제목제목</td>
-                        <td>내용내용내용내용내용내용</td>
-                    </tr>
-                    <tr>
-                        <td>제목제목제목제목제목제목</td>
-                        <td>내용내용내용내용내용내용</td>
-                    </tr>
-                    <tr>
-                        <td>제목제목제목제목제목제목</td>
-                        <td>내용내용내용내용내용내용</td>
-                    </tr>
-                </table>
-                <!-- <div class="title">
-                    <span>제목</span>
-                    <p></p>
+                 <div class="title">
+                    <p>제목</p>
                 </div>
-                <div class="date">
-                    <span>기간</span>
-                    <p>2020.06.21~2120.12.15</p>
+                <div class="info">
+                    <div class="date">
+                        <p>2020.06.21~2120.12.15</p>
+                    </div>
+                    <div class="group1">
+                        <div class="language">
+                            <p>언</p>
+                        </div> 
+                        <div class="department">
+                            <p>게</p>
+                        </div>
+                        <div class="person">
+                            <p>5명</p>
+                        </div>
+                        <div class="place">
+                            <p>서울</p>
+                        </div>
+                    </div>
+                    <div class="group2">
+                        <div class="contact">
+                            <p>연락</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="language">
-                    <span>언어</span>
-                    <p></p>
-                </div> -->
-                <!-- <div class="department">
-                    <span>분야</span>
-                    <p></p>
+                <div class="contents">
+
                 </div>
-                <div class="person">
-                    <span>인원</span>
-                    <p></p>
-                </div>
-                <div class="place">
-                    <span>장소</span>
-                    <p></p>
-                </div>
-                <div class="contact">
-                    <span>연락처</span>
-                    <p></p>
-                </div> -->
                 <!-- <div class="button-wrap">
                     <button type="submit" class="popup_button view-button">마감</button>
                         <button type="button" class="popup_button view-button exit">닫기</button>
@@ -320,8 +308,8 @@
                     ,monthNames: ['1월','2월','3월','4월','5월','6월','7월','8월','9월','10월','11월','12월'] //달력의 월 부분 Tooltip 텍스트
                     ,dayNamesMin: ['일','월','화','수','목','금','토'] //달력의 요일 부분 텍스트
                     ,dayNames: ['일요일','월요일','화요일','수요일','목요일','금요일','토요일'] //달력의 요일 부분 Tooltip 텍스트
-                    ,minDate: "-1M" //최소 선택일자(-1D:하루전, -1M:한달전, -1Y:일년전)
-                    ,maxDate: "+1M" //최대 선택일자(+1D:하루후, -1M:한달후, -1Y:일년후)                
+                    ,minDate: "today" //최소 선택일자(-1D:하루전, -1M:한달전, -1Y:일년전)
+                    //,maxDate: "+1M" //최대 선택일자(+1D:하루후, -1M:한달후, -1Y:일년후)                
                 }                
             
             //초기값을 오늘 날짜로 설정
@@ -330,7 +318,7 @@
 
         $(document).ready(function() {
             $("#pop_startDate").datepicker(date).datepicker('setDate', 'today');
-            $("#pop_endDate").datepicker();
+            $("#pop_endDate").datepicker(date);
 
             $(".panel").click(function(){
                 console.log($(".side-wrapper").css("left"));
