--- a/html/main.html
+++ b/html/main.html
@@ -278,7 +278,7 @@
                     </div>
                 </div>
                 <div class="contents">
-
+^&&asdasdasd
                 </div>
                 <!-- <div class="button-wrap">
                     <button type="submit" class="popup_button view-button">마감</button>
