--- a/html/main.html
+++ b/html/main.html
@@ -133,8 +133,8 @@
                                    <span><i class="far fa-calendar-alt"></i></span>
                                    06.08 ~ 09.09
                                 </div>
-                                <div class="view-button view">
-                                    <i class="fas fa-ellipsis-h"></i>
+                                <div class="">
+                                    <i class="fas fa-ellipsis-h view-button view"></i>
                                 </div>
                             </div>
 
