--- a/html/main.html
+++ b/html/main.html
@@ -255,24 +255,34 @@
                 </div>
                 <div class="info">
                     <div class="date">
+                        <i class="far fa-calendar-alt"></i>
                         <p>2020.06.21~2120.12.15</p>
                     </div>
                     <div class="group1">
-                        <div class="language">
-                            <p>언</p>
-                        </div> 
-                        <div class="department">
-                            <p>게</p>
+                        <div class="subgroup1">
+                            <div class="language">
+                                <i class="fab fa-amilia"></i>
+                                <p>언</p>
+                            </div> 
+                            <div class="department">
+                                <i class="fas fa-book-open"></i>
+                                <p>게</p>
+                            </div>
                         </div>
-                        <div class="person">
-                            <p>5명</p>
-                        </div>
-                        <div class="place">
-                            <p>서울</p>
+                        <div class="subgroup1">
+                            <div class="person">
+                                <i class="fas fa-user-friends"></i>
+                                <p>5명</p>
+                            </div>
+                            <div class="place">
+                                <i class="fas fa-map-marker-alt"></i>
+                                <p>서울</p>
+                            </div>
                         </div>
                     </div>
                     <div class="group2">
                         <div class="contact">
+                            <i class="far fa-envelope"></i>
                             <p>연락</p>
                         </div>
                     </div>
